[project]
name = "image-format-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cx-freeze>=7.2.10",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pillow-heif>=0.21.0",
    "pyside6>=6.8.2.1",
]
